# rdb-memory-mcp

./: .gitignore  Cargo.toml  README.md
.github/: actionlint.yaml
.github/workflows/: ci.yml  live-adapters.yml  release.yml
crates/database-memory-cli/: Cargo.toml
crates/database-memory-cli/src/: args.rs  main.rs  metadata.rs
crates/database-memory-cli/tests/: contract_parity.rs
crates/database-memory-core/: Cargo.toml
crates/database-memory-core/examples/: scale_audit.rs
crates/database-memory-core/src/: analysis_outcome.rs  bench_support.rs  canonical.rs  canonical_validation.rs  certification.rs  config.rs  graph_builder.rs  graph_query.rs  graph_store.rs  impact_analysis.rs  interface_contract.rs  introspection.rs  lib.rs  redact.rs  relationship_trace.rs  schema_diff.rs  snapshot_validation.rs
crates/database-memory-core/src/adapters/: mod.rs  mysql.rs  mysql_catalog.rs  odbc.rs  oracle.rs  oracle_catalog.rs  postgres.rs  postgres_catalog.rs  sqlite.rs  sqlite_catalog.rs  sqlite_sql.rs  sqlserver.rs  sqlserver_catalog.rs  yugabytedb.rs
crates/database-memory-core/src/ddl/: sqlite.rs
crates/database-memory-mcp/: Cargo.toml
crates/database-memory-mcp/src/: lib.rs  main.rs  path_policy.rs  tools.rs  tools_tests.rs  types.rs
dev/: db-test-schema.sql  docker-compose.db-test.yml
docs/: install.md  testing.md
docs/plans/: database-memory-complete-rdb.md  database-memory-mcp.md  database-memory-paged-inventory.md  database-memory-product-contract.md  test-tier-separation.md
docs/reports/: database-memory-complete-rdb.phase-1.md  database-memory-complete-rdb.phase-10.md  database-memory-complete-rdb.phase-11.md  database-memory-complete-rdb.phase-2.md  database-memory-complete-rdb.phase-3.md  database-memory-complete-rdb.phase-4.md  database-memory-complete-rdb.phase-5.md  database-memory-complete-rdb.phase-7.md  database-memory-complete-rdb.phase-8-yugabytedb.md  database-memory-complete-rdb.phase-9.md  database-memory-mcp.phase-1.md  database-memory-mcp.phase-10.md  database-memory-mcp.phase-11.md  database-memory-mcp.phase-12.md  database-memory-mcp.phase-13.md  database-memory-mcp.phase-14.md  database-memory-mcp.phase-15.md  database-memory-mcp.phase-16.md  database-memory-mcp.phase-17.md  database-memory-mcp.phase-18.md  database-memory-mcp.phase-19.md  database-memory-mcp.phase-2.md  database-memory-mcp.phase-20.md  database-memory-mcp.phase-21.md  database-memory-mcp.phase-22.md  database-memory-mcp.phase-23.md  database-memory-mcp.phase-24.md  database-memory-mcp.phase-25.md  (+9 more)
examples/: sample-schema.sql
scripts/: package-release.ps1  run-scale-audit.ps1
(+5 files in other folders)
