[package]
name = "database-memory-cli"
version = "0.1.2"
edition = "2021"
license = "MIT"

[[bin]]
name = "database-memory"
path = "src/main.rs"

[dependencies]
database-memory-core = { path = "../database-memory-core" }
serde = "1"
serde_json = "1"

[dev-dependencies]
database-memory-mcp = { path = "../database-memory-mcp" }
rmcp = { version = "2", features = ["server", "macros"] }
