[package]
name = "database-memory-core"
version = "0.1.0"
edition = "2021"
license = "MIT"

[lib]
path = "src/lib.rs"

[features]
bench-support = []
unsafe-row-sampling = []

[dependencies]
rusqlite = { version = "0.32", features = ["bundled"] }
postgres = "0.19"
mysql = "28"
oracle = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tiberius = { version = "0.12", default-features = false, features = ["tds73", "rustls"] }
tokio = { version = "1", features = ["net", "rt", "time"] }
tokio-util = { version = "0.7", features = ["compat"] }
toml = "0.8"
