[package]
name = "database-memory-core"
version = "0.1.2"
edition = "2021"
license = "MIT"

[lib]
path = "src/lib.rs"

[[example]]
name = "scale-audit"
path = "examples/scale_audit.rs"
required-features = ["bench-support"]

[features]
bench-support = []
odbc = ["dep:odbc-api"]

[dependencies]
rusqlite = { version = "0.32", features = ["bundled", "hooks"] }
postgres = "0.19"
postgres-native-tls = "0.5"
native-tls = "0.2"
mysql = { version = "28", features = ["rustls-tls-ring"] }
connection-string = "0.2"
oracle = "0.6"
odbc-api = { version = "29", default-features = false, features = ["odbc_version_3_80"], optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlite3-parser = "=0.17.0"
sqlparser = { version = "0.62", features = ["visitor"] }
tiberius = { version = "0.12", default-features = false, features = ["tds73", "rustls"] }
tokio = { version = "1", features = ["macros", "net", "rt", "time"] }
tokio-util = { version = "0.7", features = ["compat"] }
toml = "0.8"
