[package]
name = "database-memory-mcp"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
database-memory-core = { path = "../database-memory-core" }
rmcp = { version = "2", features = ["server", "macros", "transport-io", "schemars"] }
schemars = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "io-std"] }
